--- a/app/practice.html
+++ b/app/practice.html
@@ -46,7 +46,7 @@
 
     <div class="row about">
       <div class="col">
-        <h3 class="about-title">Lorem Ipsum Dolor Sit</h3>
+        <h3 class="about-title">Vision</h3>
         <hr><br/>
         <p class="about-details">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
           Hic, deserunt aut. Odit error eius quas, hic quibusdam ullam atque nisi
@@ -62,11 +62,23 @@
 
     <div class="row practice-areas">
       <div class="col">
-        <h3 class="practice-title">Lorem Ipsum Dolor Sit</h3>
+        <h3 class="practice-title">Services</h3>
         <hr><br/>
         <p class="practice-details">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Hic, deserunt aut. Odit error eius quas, hic quibusdam ullam atque nisi
             reprehenderit vitae illum obcaecati! Quaerat neque tempora reprehenderit molestias officia!</p>
+        <ul>
+          <li>Commercial Contracts</li>
+          <li>Corporation Formation</li>
+          <li>Trademarks + Copyrights</li>
+          <li>Compliance</li>
+          <li>Employment</li>
+          <li>Real Estate</li>
+          <li>Pre-Litigation</li>
+          <li>e-Discovery</li>
+          <li>Appeals</li>
+          <li>General Counsel</li>
+        </ul>
       </div>
       <div class="col-xs-12"></div>
     </div>
